--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
 		"@lucide/svelte": "^0.511.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0"
+		"typescript": "^5.0.0",
+		"zod": "^3.25.27"
 	}
 }
