--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,10 @@
 	"peerDependencies": {
 		"svelte": "^5.0.0"
 	},
+	"dependencies": {
+		"@lucide/svelte": "^0.511.0"
+	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.511.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0"
