--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "file:../../../Clones/vite-plugin-svelte/packages/vite-plugin-svelte",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"working": "workspace:*",
 		"broken": "workspace:*",
 		"svelte": "^5.0.0",
